build.gradle  - All sourceSets will produce the correct bytecode version now